--- a/20230405_01/20230405_01/20230405_01.vcxproj
+++ b/20230405_01/20230405_01/20230405_01.vcxproj
@@ -130,7 +130,10 @@
     <ClCompile Include="20230405_01.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="game31.cpp" />
+    <ClCompile Include="game31.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="timeAttackGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="강의내용.txt" />
