--- a/20230405_01/20230405_01/20230405_01.vcxproj.filters
+++ b/20230405_01/20230405_01/20230405_01.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="timeAttackGame.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="randomNumber.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="강의내용.txt" />
