테트리스 코드 작성 (미완)

--- a/20230407_02_Tetris/20230407_02_Tetris/20230407_02_Tetris.vcxproj
+++ b/20230407_02_Tetris/20230407_02_Tetris/20230407_02_Tetris.vcxproj
@@ -128,6 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="20230407_02_Tetris.cpp" />
+    <ClCompile Include="Block.h" />
+    <ClCompile Include="TetrisTable.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TetrisTable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
